# Matrixes

./: CMakeLists.txt  README.md
Google_tst/: CMakeLists.txt  test_matrixes.cpp
lib/: IdentityMatrix.h  Matrix.h  Node.h  TriangularMatrix.h  UniLists.h  UniversalNode.h
src/: IdentityMatrix.cpp  Matrix.cpp  Node.cpp  TriangularMatrix.cpp  UniLists.inl  UniversalNode.cpp  main.cpp
src/materials/: Matrix.txt  NumbersForMatrix.txt  add_tst.txt
